--- a/package.json
+++ b/package.json
@@ -89,3 +89,4 @@
     "publish-patch": "npm run lint && npm run beautify-lint && mocha && npm version patch && git push && git push --tags && npm publish"
   }
 }
+{ssss}
